# TerminalDashboard

./: CMakeLists.txt  LICENSE  README.md  main.cpp  system_stats.cpp  system_stats.h  time_utils.cpp
.github/workflows/: release.yaml
tests/: test_cpu.cpp  test_mem.cpp  test_weather.cpp
